updated swagger documentation
