# docs/swagger.json
@@ -19,6 +19,14 @@
                 ],
                 "summary": "Request Info on Benefits",
                 "operationId": "benefits",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "The language the response should be in. Defaults to English. English and French supported.",
+                        "name": "lang",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -72,6 +80,14 @@
                 ],
                 "summary": "Request Info on Life Journey",
                 "operationId": "life-journey",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "The language the response should be in. Defaults to English. English and French supported.",
+                        "name": "lang",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -114,9 +130,6 @@
                 "description": {
                     "type": "string"
                 },
-                "description_fr": {
-                    "type": "string"
-                },
                 "id": {
                     "type": "string"
                 },
@@ -128,9 +141,6 @@
                 },
                 "title": {
                     "type": "string"
-                },
-                "title_fr": {
-                    "type": "string"
                 }
             }
         },
@@ -140,19 +150,10 @@
                 "field_long_description": {
                     "type": "string"
                 },
-                "field_long_description_fr": {
-                    "type": "string"
-                },
                 "field_short_description": {
                     "type": "string"
                 },
-                "field_short_description_fr": {
-                    "type": "string"
-                },
                 "fieldname": {
-                    "type": "string"
-                },
-                "fieldname_fr": {
                     "type": "string"
                 }
             }
@@ -161,9 +162,6 @@
             "type": "object",
             "properties": {
                 "description": {
-                    "type": "string"
-                },
-                "description_fr": {
                     "type": "string"
                 },
                 "id": {
@@ -182,9 +180,6 @@
                     }
                 },
                 "title": {
-                    "type": "string"
-                },
-                "title_fr": {
                     "type": "string"
                 }
             }
